# pkgs

./: .editorconfig  .gitignore  Cargo.toml  README.md  clippy.toml  ruff.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/scripts/: about.hbs  about.toml  gen_licenses.py  gen_third_party_licenses.py  matrix.py  package_version.py  path_filter.py  render_pypi_readme.py
.github/workflows/: _release.yaml  _test-python-rust.yaml  _test-python.yaml  _test.yaml  ci.yaml  release.yaml
blurhash-rs/: Cargo.toml  build.rs  pyproject.toml
blurhash-rs/python/blurhash_rs/: __init__.py
blurhash-rs/src/: base83.rs  color.rs  cos.rs  decode.rs  encode.rs  errors.rs  lib.rs  srgb.rs
blurhash-rs/tests/: test___init__.py
githead/: README.md  pyproject.toml
githead/githead/: __init__.py
githead/tests/: test___init__.py
h2corn/: AGENTS.md  Cargo.toml  README.md  properdocs.yml  pyproject.toml
h2corn/_snippets/: links.md
h2corn/bench/: README.md  bench.py  bench_app.py  compare.py  mask_kernel.rs  mask_kernel_compare.py  matrix.py  matrix.toml  provenance.py  system.py
h2corn/bench/k6/: ws.js
h2corn/docs/: benchmarks.md  embedding.md  faq.md  index.md  quickstart.md  robots.txt  support.md  websockets.md
h2corn/docs/api/: config.md  index.md  server.md  types.md
h2corn/docs/deployment/: operations.md  proxy.md  tls.md
h2corn/docs/stylesheets/: extra.css
h2corn/examples/: Caddyfile  embedded.py  factory.py  h2corn.toml  haproxy.cfg  hello.py
h2corn/overrides/: main.html
h2corn/python/h2corn/: __init__.py  __main__.py  _cli.py  _config.py  _lib.pyi  _lifespan.py  _reload.py  _server.py  _socket.py  _supervisor.py  _types.py
h2corn/scripts/: gen_config_reference.py
h2corn/src/: access_log.rs  app_call.rs  ascii.rs  async_util.rs  bridge.rs  buffered_events.rs  config.rs  console.rs  error.rs  ext.rs  frame.rs  h2_frame.rs  header_value.rs  inline_fifo.rs  lib.rs  proxy.rs  proxy_protocol.rs  pyapi.rs  python.rs  runtime.rs  sendfile.rs  server.rs  server_tests.rs  smallvec_deque.rs  tls.rs
h2corn/src/bridge/: http.rs  mod.rs  websocket.rs
h2corn/src/h1/: http.rs  mod.rs  parse.rs  websocket.rs
h2corn/src/h2/: deadline.rs  http.rs  mod.rs  request.rs  state.rs  websocket.rs
h2corn/src/h2/writer/: driver.rs  flush.rs  header_encode.rs  ingress.rs  mod.rs  stream_state.rs
h2corn/src/hpack/: decoder.rs  dynamic_table.rs  encoder.rs  header.rs  mod.rs  static_table.rs
h2corn/src/hpack/huffman/: mod.rs  table.rs
h2corn/src/http/: analysis.rs  app.rs  body.rs  digits.rs  execution.rs  header.rs  header_meta.rs  header_value.rs  mod.rs  pathsend.rs  planner.rs  run_request.rs  scope.rs  types.rs
h2corn/src/http/app/: buffered.rs  mod.rs
h2corn/src/http/response/: actions.rs  controller.rs  driver.rs  mod.rs  transport.rs
h2corn/src/http/scope/: forwarded.rs  mod.rs  proxy.rs
h2corn/src/pyloop/: future.rs  mod.rs  pump.rs  slot.rs
h2corn/src/websocket/: app.rs  deflate.rs  mod.rs  request.rs  session.rs
h2corn/src/websocket/codec/: cursor.rs  decode.rs  frame.rs  mask.rs  mod.rs
h2corn/src/websocket/session/: accepted.rs  handshake.rs  mod.rs
h2corn/tests/: _support.py  conftest.py  test_asgi_semantics.py  test_bench_compare.py  test_bench_matrix.py  test_bench_public.py  test_bench_system.py  test_config.py  test_h2spec.py  test_http1.py  test_http2.py  test_http2_protocol.py  test_lifespan.py  test_proxy.py  test_public_types.py  test_reload.py  test_runtime.py  test_server_bootstrap.py  test_stubs.py  test_tls.py  test_websocket.py
h2corn/tools/: ci_before_test.sh  stubconfig.py
httpx-secure/: README.md  pyproject.toml
httpx-secure/httpx_secure/: __init__.py
httpx-secure/tests/: conftest.py  test___init__.py
jinja2-htmlmin/: README.md  pyproject.toml
jinja2-htmlmin/jinja2_htmlmin/: __init__.py
jinja2-htmlmin/tests/: test___init__.py
lrucache-rs/: Cargo.toml  README.md  pyproject.toml
lrucache-rs/python/lrucache_rs/: _lib.pyi
lrucache-rs/src/: cache.rs  errors.rs  key.rs  lib.rs  store.rs
lrucache-rs/tests/: test___init__.py  test_stubs.py
lrucache-rs/tools/: stubconfig.py
osm-shortlink/: Cargo.toml  README.md  pyproject.toml
osm-shortlink/src/: codec.rs  constants.rs  errors.rs  lib.rs
osm-shortlink/tests/: test___init__.py
polyline-rs/: Cargo.toml  README.md  pyproject.toml
polyline-rs/src/: constants.rs  decode.rs  encode.rs  errors.rs  lib.rs  zigzag.rs
polyline-rs/tests/: test___init__.py
pyo3stubcheck/: pyproject.toml
pyo3stubcheck/pyo3stubcheck/: __init__.py  config.py  context.py  leaked_types.py  protocols.py  stub_docs.py  stub_parity.py  surface_parity.py
pyo3stubcheck/pyo3stubcheck/plugins/: __init__.py  namespace_facade.py  rust_text_signature.py  token_vocabulary.py
pyo3stubs/: README.md  pyproject.toml
pyo3stubs/pyo3stubs/: __init__.py  __main__.py  ast_util.py  cli.py  config.py  context.py  doc_contract.py  duality.py  gates.py  gen.py  leaked_types.py  namespace_facade.py  oracle.py  parity.py  protocols.py  rust_nullability.py  rust_scan.py  structural.py  surface.py  testing.py  text_signature.py  token_vocabulary.py
pyo3stubs/pyo3stubs/plugins/: __init__.py  namespace_facade.py  rust_text_signature.py  token_vocabulary.py
pyo3stubs/tests/: conftest.py  test_checks.py  test_oracle.py
pyo3stubs/tests/fixtures/fakepkg/: __init__.py  _lib.py  _lib.pyi
pyo3stubs/tests/fixtures/src/: lib.rs
sizestr/: README.md  pyproject.toml
starlette-compress/: README.md  pyproject.toml
starlette-compress/starlette_compress/: __init__.py  _brotli.py  _gzip.py  _identity.py  _responder.py  _utils.py  _zstd.py  _zstd_legacy.py
starlette-compress/tests/: test___init__.py
totp-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
totp-rs/python/totp_rs/: _lib.pyi
totp-rs/src/: algorithm.rs  base32.rs  errors.rs  lib.rs  secret.rs  time.rs  totp.rs
totp-rs/tests/: test___init__.py
zid/: Cargo.toml  README.md  pyproject.toml
zid/python/zid/: _lib.pyi
zid/src/: constants.rs  core.rs  errors.rs  lib.rs
zid/tests/: test___init__.py
