[workspace]
resolver = "3"
members = [
  "blurhash-rs",
  "h2corn",
  "lrucache-rs",
  "osm-shortlink",
  "polyline-rs",
  "totp-rs",
  "zid",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# These crates' `///` comments are the SOURCE for Python numpydoc docstrings
# (gen_stub_docs.py): Parameters/Returns tables need bare `name : type`, but
# doc_markdown wants every kwarg/type backticked and `clippy --fix` would break
# the docs. properdocs --strict is the real doc gate, so this lint is off here.
doc_markdown = "allow"
# Same reason: the `///` first paragraph IS the numpydoc summary, whose length is
# governed by the docs site, not rustdoc's paragraph heuristic.
too_long_first_doc_paragraph = "allow"
future_not_send = "allow"
imprecise_flops = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
# These crates are never published — only their Python wheels are — so explicit
# `pub(crate)` is the accurate, intentional visibility for cross-module internals,
# not redundancy. (The inverse, `unreachable_pub` below, narrows stray `pub`.)
redundant_pub_crate = "allow"
return_self_not_must_use = "allow"
struct_field_names = "allow"
suboptimal_flops = "allow"
unused_self = "allow"
wildcard_imports = "allow"

absolute_paths = "warn"
allow_attributes = "warn"
arbitrary_source_item_ordering = "warn"
assertions_on_result_states = "warn"
decimal_literal_representation = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_zero_suggestions = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
suspicious_xor_used_as_pow = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
# New in clippy 2026: fires on sync impls of async trait methods, but its
# suggested rewrites then trip manual_async_fn / impl-trait-signature-match.
# Until the lint family is coherent, keep idiomatic `async fn` impls.
unused_async_trait_impl = "allow"
unused_result_ok = "warn"
verbose_file_reads = "warn"

[workspace.lints.rust]
# Crates are unpublished (only the Python wheels ship), so the narrowest accurate
# visibility is the goal: an item not reachable from the crate's real public API
# should be `pub(crate)`, not `pub`. This drives that narrowing; pair with the
# clippy `redundant_pub_crate = "allow"` above (the two are inverses).
unreachable_pub = "warn"

[profile.release]
lto = true
codegen-units = 1
