[package]
name = "blurhash_rs"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "blurhash_rs"

[dependencies]
arrayvec = "0.7.6"
pyo3 = "0.28.3"
thiserror = "2.0"

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[lints]
workspace = true
