[package]
name = "h2corn"
version = "1.2.3"
edition = "2024"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "_lib"

[dependencies]
anstream = "0.6"
atoi_simd = "0.18"
bytes = "1.11"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
http = "1.3"
itoa = "1.0"
memchr = "2.8"
nohash-hasher = "0.2"
owo-colors = { version = "4.2", features = ["supports-colors"] }
parking_lot = "0.12"
pyo3 = { version = "0.28.2", features = ["bytes"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
rustix = { version = "1.1", features = ["fs", "net"] }
smallvec = { version = "1.15", features = ["const_generics", "union"] }
thiserror = "2.0"
tokio = { version = "1.48", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time"
] }
zerocopy = { version = "0.8", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
