[package]
name = "h2corn"
version = "1.4.4"
edition = "2024"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "_lib"

[dependencies]
anstream = "0.6"
atoi_simd = "0.18"
bytes = "1.11"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
http = "1.3"
itoa = "1.0"
memchr = "2.8"
nohash-hasher = "0.2"
owo-colors = { version = "4.2", features = ["supports-colors"] }
parking_lot = "0.12"
pyo3 = { version = "0.28.3", features = ["bytes"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
rustix = { version = "1.1", features = ["fs", "net"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "std",
  "tls12",
] }
rustls-pki-types = { version = "1.14", features = ["std"] }
smallvec = { version = "1.15", features = ["const_generics", "union"] }
thiserror = "2.0"
tokio = { version = "1.48", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time"
] }
tokio-rustls = { version = "0.26", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[lints]
workspace = true
