[project]
name = "h2corn"
description = "High-performance HTTP/2 ASGI server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kamil Monicz", email = "kamil@monicz.dev" }]
keywords = [
  "asgi",
  "fastapi",
  "h2c",
  "http",
  "http2",
  "server",
  "starlette",
  "tls",
  "websocket",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://h2corn.monicz.dev/"
Homepage = "https://h2corn.monicz.dev/"
Issues = "https://github.com/Zaczero/pkgs/issues"
Repository = "https://github.com/Zaczero/pkgs/tree/main/h2corn"

[project.scripts]
h2corn = "h2corn._server:main"

[project.optional-dependencies]
uvloop = ["uvloop>=0.21.0; sys_platform != 'win32'"]

[dependency-groups]
dev = [
  "fastapi>=0.118.0",
  "griffe-inherited-docstrings>=1.0",
  "gunicorn>=25.3.0",
  "h2>=4.2.0",
  "h2corn[uvloop]",
  "hpack>=4.1.0",
  "hypercorn>=0.18.0",
  "matplotlib>=3.10.8",
  "mkdocs-gen-files>=0.5",
  "mkdocs-material>=9.5",
  "mkdocs-minify-plugin>=0.8",
  "mkdocstrings[python]>=0.27",
  "properdocs>=1.6",
  "pyo3stubs",
  "pymdown-extensions>=10.7",
  "pytest-asyncio>=0.26.0",
  "pytest>=9.0.0",
  "ruff>=0.9",
  "starlette>=0.46.0",
  "trustme>=1.2.0",
  "uvicorn>=0.43.0",
  "websockets>=16.0",
]

[tool.uv]
sources = { pyo3stubs = { path = "../pyo3stubs", editable = true } }

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "h2corn._lib"
python-source = "python"

[tool.pyright]
extraPaths = ["python"]
include = ["python/h2corn", "tests"]
pythonPlatform = "All"
pythonVersion = "3.11"
strict = ["python/h2corn"]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
filterwarnings = [
  # Tests parametrize uvloop via EventLoopPolicy (pytest-asyncio); that
  # still hits asyncio's deprecated policy API. Production uses an
  # explicit loop factory and never installs a global policy.
  "ignore:'asyncio.(set_event_loop_policy|DefaultEventLoopPolicy)':DeprecationWarning",
  # uvloop 0.22.1's executor bridge still calls the deprecated helper while
  # these tests deliberately exercise Server's cross-thread lifecycle API.
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:asyncio.threads",
]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
extend = "../ruff.toml"
