[project]
name = "jinja2-htmlmin"
description = "Automatic HTML minification for Jinja2 templates"
readme = "README.md"
requires-python = ">=3.9"
license = "0BSD"
authors = [{ name = "Kamil Monicz", email = "kamil@monicz.dev" }]
keywords = [
  "fastapi",
  "html",
  "htmlmin",
  "jinja",
  "jinja2",
  "minification",
  "minify",
  "optimization",
  "performance",
  "response",
  "starlette",
  "template",
  "web",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]
dependencies = ["htmlmin2", "jinja2"]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/Zaczero/pkgs/issues"
Repository = "https://github.com/Zaczero/pkgs/tree/main/jinja2-htmlmin"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "jinja2_htmlmin/__init__.py"

[tool.pyright]
include = ["jinja2_htmlmin"]
pythonPlatform = "All"
pythonVersion = "3.9"
typeCheckingMode = "standard"

[tool.ruff]
extend = "../ruff.toml"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "jinja2_htmlmin/__init__.py" },
]
