[package]
name = "lrucache_rs"
version = "1.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "lrucache_rs"

[dependencies]
nohash-hasher = "0.2.0"
ordered_hash_map = "0.5.0"
parking_lot = "0.12.5"
pyo3 = "0.28.3"

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[lints]
workspace = true
