[package]
name = "lrucache_rs"
version = "1.6.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "lrucache_rs"

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = [
  "inline-more"
] }
parking_lot = "0.12.5"
pyo3 = { version = "0.28.3", features = ["parking_lot"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[lints]
workspace = true
