[project]
name = "pyo3stubs"
version = "0.1.0"
requires-python = ">=3.11"
# libcst backs the stub docstring generator (gen.py); the check-only modules are
# stdlib (ast) so they run even where libcst is unavailable.
dependencies = ["libcst"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyo3stubs"]
