[project]
name = "pyo3stubs"
version = "0.1.0"
requires-python = ">=3.11"
# libcst backs the stub docstring generator (gen.py); mypy backs the stub
# validity gate (mypy.api) and the stub/runtime oracle (mypy.stubtest).
dependencies = ["libcst", "mypy>=1.15"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pyo3stubs"]

[tool.ruff.lint.per-file-ignores]
# Fixture stub follows the toolkit's own convention: the docstring lives on
# the final (canonical) @overload variant.
"tests/fixtures/fakepkg/_lib.pyi" = ["D418"]
