[package]
name = "totp_rs"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "totp_rs"

[dependencies]
hmac = { version = "0.12.1", features = ["reset"] }
pyo3 = "0.28.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
subtle = "2.6.1"

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[lints]
workspace = true
